--- a/wp-content/themes/portfolio/resources/css/settings/variable.scss
+++ b/wp-content/themes/portfolio/resources/css/settings/variable.scss
@@ -2,7 +2,7 @@
 $black: #100C08;
 $grey: #5B5959;
 $white: #FBFCFA;
-$red: #F75B5B;
+$red: #E53935;
 $red-line: rgba(247, 91, 91, .15);
 
 $light-grey-hover: #EFEFEF;
